# KmerChat

./: .gitignore  CMakeLists.txt  abstractnetworkmessage.cpp  abstractnetworkmessage.h  main.cpp  message.cpp  message.h  request.cpp  request.h  response.h  user.cpp  user.h  usermodel.cpp
client/: CMakeLists.txt  appclient.cpp  appclient.h  main.cpp  serversocket.cpp  serversocket.h  test.cpp  test.h
client/services/: authservice.cpp  authservice.h
client/ui/: dialog.cpp  dialog.h  dialog.ui  login.cpp  login.h  login.ui  main.qml  signup.cpp  signup.h  signup.ui
core/: CMakeLists.txt  abstractnetworkmessage.cpp  abstractnetworkmessage.h  message.cpp  message.h  request.cpp  request.h  response.cpp  response.h  user.cpp  user.h  utils.cpp  utils.h
core/models/: usermodel.cpp  usermodel.h
core/services/: abstractdbservice.cpp  abstractdbservice.h  abstractservice.h
server/: CMakeLists.txt  appserver.cpp  appserver.h  config-sample.json  configloader.cpp  configloader.h  main.cpp
server/models/: connectionmodel.cpp  connectionmodel.h
server/services/: appservice.cpp  appservice.h  authservice.cpp  authservice.h  chatservice.cpp  chatservice.h  dbservice.cpp  dbservice.h
services/: abstractdbservice.h  abstractservice.h  appservice.cpp  appservice.h  authservice.cpp  authservice.h  chatservice.cpp  chatservice.h  dbservice.cpp  dbservice.h
tests/: CMakeLists.txt  test_message.cpp
